<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/gesture_screen"
    android:orientation="vertical" >

    <Spinner
        android:id="@+id/gesture_dropdown"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:entries="@array/gestures_arrays"
        android:prompt="@string/gestures_prompt" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/save_password"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/gesture_delete" />

        <Button
            android:id="@+id/gesture_train"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/gesture_train" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
        </LinearLayout>

        <TextView
            android:id="@+id/apps_text_launcher"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/gesture_treshold"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <SeekBar
                android:id="@+id/gesture_tolerance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.70"
                android:max="15"
                android:progress="5" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/gesture_around_start"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/gesture_start_stop"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

        <ProgressBar
            android:id="@+id/gesture_train_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:max="5" />

    </RelativeLayout>

</LinearLayout>
